<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Panama City Portal</string>
    <string name="title_activity_restaurant">RestaurantActivity</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="title_activity_place_detail">PlaceDetail</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="title_activity_employment">EmploymentActivity</string>
    <string name="title_activity_feed">FeedActivity</string>
    <string name="title_activity_weather">Weather</string>
    <string name="custom_title_text">Welcome to Panama City</string>
    <string name="custom_title_desc">Panama City</string>
    <string name="food_text">Food</string>
    <string name="entertainment_text">Entertainment</string>
    <string name="shopping_text">Shopping</string>
    <string name="schools_text">Schools</string>
    <string name="news_text">News</string>
    <string name="empl_text">Employment</string>
    <string name="weather_text">Weather</string>
    <string name="transportation_text">Transportation</string>
    <string name="loading_text">Loading&#8230;</string>
    <string name="returnText">Press Back to Return</string>
    <string name="newsCourtesy">News courtesy of The News Herald</string>
    <string name="emplCourtesy">Jobs courtesy of Monster</string>
    
    <string name="eventsCourtesy">Events courtesy of visitpanamacitybeach.com</string>
    <string name="EventsIcon">Events Icon</string>
    <string name="events_text">Events</string>
    <string name="title_activity_events">Events</string>
    <string name="eventsRss">http://www.visitpanamacitybeach.com/includes/cfcs/syndication/RSS/rssManager.cfc?method=showFeed&amp;feedType=events&amp;e_catID=0</string>
    <string name="eventsViewMore">http://m.visitpanamacitybeach.com/calendar.cfm</string>
    
    <string name="newsSource">http://m.newsherald.com/</string>
    <string name="newsViewMore">http://m.newsherald.com</string>
    <string name="topNews">Top%20News</string>
    <string name="jobsRss">http://rss.jobsearch.monster.com/rssquery.ashx?where=Panama+City%2C+FL</string>
    <string name="jobsViewMore">http://m.monster.com/JobSearch/Search?jobtitle=&amp;keywords=&amp;where=Panama+City%2C+FL</string>
    <string name="placePhoto">Place Photo</string>
    <string name="locations_prompt">Select Location</string>
    <string name="rain">----</string>
    <string name="wind">Wind:</string>
    <string name="humidity">Humidity:</string>
    <string name="sunrise">Sunrise:</string>
    <string name="sunset">Sunset:</string>
    <string name="pressure">Pressure</string>
    <string name="clouds">Clouds:</string>
    <string name="weatherIcon">Weather Icon</string>
    <string name="job_search_title">Job Search</string>
    <string name="search">Search</string>
    <string name="cancel">Cancel</string>
    <string name="location">City, State or Zip</string>
    <string name="jobTitle">Job Title</string>
    <string name="keyword">Keyword eg. sales, nurse</string>
    <string name="pcsite">Panama City Website</string>
    <string name="about">About</string>
    <string name="transitPage">Panama City Transit Page</string>
    <string name="trolleySite">Bay Town Trolley Site</string>
    <string name="filterTitle">Filter results</string>
    <string name="filterHint">Filter results...</string>
    
    

    <string-array name="locations">
        <item>My Location</item>
        <item>Panama City</item>
    </string-array>


</resources>
