<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/restaurants"
                android:contentDescription="@string/food_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/food_text"
                android:textSize="12sp" />
            
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnEntertainment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/entertainment"
                android:contentDescription="@string/entertainment_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/entertainment_text"
                android:textSize="12sp" />
            
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnShopping"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/shopping"
                android:contentDescription="@string/shopping_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shopping_text"
                android:textSize="12sp" />
            
        </LinearLayout>
        
    </LinearLayout>

    <LinearLayout android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row1"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false" >

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnSchools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/schools"
                android:contentDescription="@string/schools_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/schools_text"
                android:textSize="12sp" />
            
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnEmployment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/employment"
                android:contentDescription="@string/empl_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/empl_text"
                android:textSize="12sp" />
            
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnNews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/news"
                android:contentDescription="@string/news_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/news_text"
                android:textSize="12sp" />
            
        </LinearLayout>
        
    </LinearLayout>

     <LinearLayout android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/row2"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false" >
        
         <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnTransportation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/transportation"
                android:contentDescription="@string/transportation_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transportation_text"
                android:textSize="12sp" />
            
        </LinearLayout>

        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnWeather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/weather"
                android:contentDescription="@string/weather_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weather_text"
                android:textSize="12sp" />
            
        </LinearLayout>
        
        <LinearLayout android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageButton android:id="@+id/btnEvents"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_launcher_pc"
                android:contentDescription="@string/events_text"
                android:onClick="onClick" />

            <TextView android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/events_text"
                android:textSize="12sp" />
            
        </LinearLayout>
        
        </LinearLayout>
        
    <!--https://developers.google.com/mobile-ads-sdk/docs/admob/fundamentals-->
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="INSERT_YOUR_AD_UNIT_ID_HERE"
      />
    
    
</RelativeLayout>